Tweak of CSS to look better in JSX version (avoid line wrap on 'go to basket' button)

--- a/dev/SolrEF.css
+++ b/dev/SolrEF.css
@@ -396,7 +396,7 @@ a.export-item {
 }
 
 .sr-add-delete-item {
-    font-weight: bold;
+    font-weight: normal;
     padding: 3px;    
     margin: 3px;
     width: 115px;
